# stash.py

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
stash/: __init__.py  _helpers.py  cache.py  consts.py  defaults.py  manager.py  options.py
stash/codecs/: brotli.py  bzip2.py  codec.py  gzip.py  lz4.py  lzf.py  lzma.py  lzo.py  passthru.py  snappy.py  zlib.py  zopfli.py  zstd.py
stash/serializers/: bson.py  cbor.py  default.py  json.py  msgpack.py  orjson.py  rapidjson.py  serializer.py  simplejson.py  ujson.py
stash/storages/: __init__.py  dbm.py  dbm_.py  filesystem.py  leveldb.py  lm_db.py  lmdb.py  lsmdb.py  memory.py  mongodb.py  null.py  redis.py  storage.py
stash/utils/: checksum.py  nested_path.py
tests/: test_checksum_and_options.py  test_dbm_storage.py  test_helpers.py  test_manager_pipeline.py  test_optional_backends.py  test_storage_contract.py
